# git_actions

./: .gitignore  Makefile  Procfile  README.md  amvera.yml  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: CI.yml
ci_proj/: asgi.py  settings.py  urls.py  wsgi.py
ci_proj/ciapp/: apps.py  tests.py  urls.py  views.py
