[tool.poetry]
name = "test-proj"
version = "0.1.0"
description = ""
authors = ["takeitawaytu <takeitawaytu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.1.3"
gunicorn = "^21.2.0"
python-dotenv = "0.19.2"
dj-database-url = "^2.1.0"
psycopg2 = "2.9.2"
django-bootstrap4 = "21.1"
django-filter = "21.1"
rollbar = "0.16.2"


[tool.poetry.group.dev.dependencies]
coverage = "6.1.2"
flake8 = "4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
